--- a/about.html
+++ b/about.html
@@ -18,14 +18,15 @@ header-img: "img/post-bg-rwd.jpg"
     <!-- blockquote><p>冰冻三尺 非一日之寒<br> -->
     <!-- 积土成山 非斯须之作</p></blockquote> -->
 
-    <p>Hey，I am Frankie Yan, computer vision/machine learning eigneer working in Singapore</p>
+    <p>Hey, I am Frank Yan, a computer vision/machine learning eigneer working in Singapore</p>
 
     <p>Outside work, I focus on my own side projects and enjoy peace in nature.</p>
     
     <p></p>
     
+     <!--
     <h5>Talks</h5>
-    <!--
+   
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
